# woopymodels

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  __init__.py  pyproject.toml  requirements.txt
woopymodels/: __init__.py  products.py
